# SnowflakeCortexCLI

./: .gitignore  CONTRIBUTING.md  README.md  convert_docs.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  problem-report.yml
.github/workflows/: pages.yml  pr-docs.yml
docs/: index.md
snowflake_cortex_cli_docx_converter/: __init__.py  cli.py
